# nonebot-plugin-fhl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/nonebot_plugin_fhl/: __init__.py  api.py  config.py  logic.py  model.py
