[project]
name = "nonebot-plugin-fhl"
dynamic = ["version"]
description = "Nonebot plugin for fhl"
authors = [
    {name = "baiqwerdvd", email = "158065462+baiqwerdvd@users.noreply.github.com"},
]
dependencies = [
    "nonebot2>=2.2.1",
    "nonebot-plugin-alconna>=0.42.4",
    "nonebot-plugin-session>=0.3.1",
    "httpx>=0.27.0",
    "msgspec>=0.18.6",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "nonebot",
    "fei hua ling",
]
[project.urls]
homepage = "https://github.com/baiqwerdvd/nonebot-plugin-fhl"
repository = "https://github.com/baiqwerdvd/nonebot-plugin-fhl"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/nonebot_plugin_fhl"]

[tool.pdm.version]
source = "file"
path = "src/nonebot_plugin_fhl/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.7",
]
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
